src/test/deca/syntax/valid/lexer/if.deca
//Programme valide testant if.

{
    if(true){
        println("ok");
    }
}