src/test/deca/syntax/invalid/parser/if.deca
// Invalid if test

{
    if (true) {

}